--- a/node/package.json
+++ b/node/package.json
@@ -14,8 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "luxon": "^2.0.1",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "nodemailer": "^6.9.14"
   },
   "devDependencies": {
     "@types/node": "^16.3.2",
